[package]
name = "banana-rust-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Erik <erikk@banana.dev>"]
description = "Simple async SDK to call the banana.dev services"
readme = "README.md"
homepage = "https://banana.dev/"
repository = "https://github.com/bananaml/banana-rust-sdk"

[lib]
doctest = false


[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["macros"] }
uuid = { version = "1.2.2", features = ["v4"] }
serde_json = "1.0.91"
lazy_static = "1.4.0"
